--- a/src/app.html
+++ b/src/app.html
@@ -3,16 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/icons/solid_anchor.svg" />
+		<link rel="stylesheet" href="global.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<style>
-			:root {
-				font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-			}
-			html, body, #svelte {
-				margin: 0;
-				height: 100%;
-			}
-		</style>
 		%svelte.head%
 	</head>
 	<body>
