--- a/icon/index.html
+++ b/icon/index.html
@@ -9,20 +9,20 @@
 
 
 
-<link rel="modulepreload" href="/./_app/start-d97f8deb.js">
-			<link rel="modulepreload" href="/./_app/chunks/vendor-680cc2f2.js">
-			<link rel="modulepreload" href="/./_app/chunks/singletons-dd9f995d.js">
-			<link rel="modulepreload" href="/./_app/pages/icon.svelte-c4906c2a.js">
-			<link rel="modulepreload" href="/./_app/chunks/Footer-507e024d.js">
-			<link rel="stylesheet" href="/./_app/assets/start-a8cd1609.css">
-			<link rel="stylesheet" href="/./_app/assets/pages/icon.svelte-aa4b34ec.css">
+<link rel="modulepreload" href="/font-awesome-svgs/_app/start-d97f8deb.js">
+			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/vendor-680cc2f2.js">
+			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/singletons-dd9f995d.js">
+			<link rel="modulepreload" href="/font-awesome-svgs/_app/pages/icon.svelte-c4906c2a.js">
+			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/Footer-507e024d.js">
+			<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/start-a8cd1609.css">
+			<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/pages/icon.svelte-aa4b34ec.css">
 
 
 		<script type="module">
-			import { start } from "/./_app/start-d97f8deb.js";
+			import { start } from "/font-awesome-svgs/_app/start-d97f8deb.js";
 			start({
 				target: document.querySelector("#svelte"),
-				paths: {"base":"","assets":"/."},
+				paths: {"base":"/font-awesome-svgs","assets":"/font-awesome-svgs"},
 				session: {},
 				host: location.host,
 				route: true,
@@ -30,7 +30,7 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/./_app/pages/icon.svelte-c4906c2a.js")
+						import("/font-awesome-svgs/_app/pages/icon.svelte-c4906c2a.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
