deploy: 49c1f9a08f11f0ce68fc71d501a10a42e22e72e4

--- a/icon/index.html
+++ b/icon/index.html
@@ -2,24 +2,21 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/icons/solid_anchor.svg" />
-		<link rel="stylesheet" href="global.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>null – Font Awesome SVGs</title>
+		<title>Font Awesome SVGs</title><link rel="icon" href="/font-awesome-svgs/icons/solid_anchor.svg" data-svelte="svelte-35nmaq">
 
 
 
-<link rel="modulepreload" href="/font-awesome-svgs/_app/start-d97f8deb.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/vendor-680cc2f2.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/singletons-dd9f995d.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/pages/icon.svelte-c4906c2a.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/Footer-507e024d.js">
-			<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/start-a8cd1609.css">
+<link rel="modulepreload" href="/font-awesome-svgs/_app/start-f7dce562.js">
+			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/vendor-5f322dcb.js">
+			<link rel="modulepreload" href="/font-awesome-svgs/_app/pages/icon.svelte-0a89fa8d.js">
+			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/Head-b62789f6.js">
+			<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/start-ba7ec5b6.css">
 			<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/pages/icon.svelte-aa4b34ec.css">
 
 
 		<script type="module">
-			import { start } from "/font-awesome-svgs/_app/start-d97f8deb.js";
+			import { start } from "/font-awesome-svgs/_app/start-f7dce562.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"/font-awesome-svgs","assets":"/font-awesome-svgs"},
@@ -30,7 +27,7 @@
 					status: 200,
 					error: null,
 					nodes: [
-						import("/font-awesome-svgs/_app/pages/icon.svelte-c4906c2a.js")
+						import("/font-awesome-svgs/_app/pages/icon.svelte-0a89fa8d.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -44,6 +41,8 @@
 	</head>
 	<body>
 		<div id="svelte">
+
+
 
 
 
