deploy: b9036c009ff73eb8e6e2f9640d5245ecb058a40f

--- a/icon/index.html
+++ b/icon/index.html
@@ -22,7 +22,7 @@
 				paths: {"base":"/font-awesome-svgs","assets":"/font-awesome-svgs"},
 				session: {},
 				host: location.host,
-				route: true,
+				route: false,
 				hydrate: {
 					status: 200,
 					error: null,
