--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				paths: {"base":"/font-awesome-svgs","assets":"/font-awesome-svgs"},
 				session: {},
 				host: location.host,
-				route: true,
+				route: false,
 				hydrate: {
 					status: 200,
 					error: null,
