deploy: 254a16b104dc1b773ba904da7b31fdc4c95cfc2d

--- a/icon/index.html
+++ b/icon/index.html
@@ -1,64 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Font Awesome SVGs</title><link rel="icon" href="/font-awesome-svgs/icons/solid_anchor.svg" data-svelte="svelte-35nmaq">
-
-
-
-<link rel="modulepreload" href="/font-awesome-svgs/_app/start-5b616241.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/vendor-5f322dcb.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/pages/icon.svelte-4ac15158.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/Head-b62789f6.js">
-			<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/start-ba7ec5b6.css">
-			<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/pages/icon.svelte-455be03c.css">
-
-
-		<script type="module">
-			import { start } from "/font-awesome-svgs/_app/start-5b616241.js";
-			start({
-				target: document.querySelector("#svelte"),
-				paths: {"base":"/font-awesome-svgs","assets":"/font-awesome-svgs"},
-				session: {},
-				host: location.host,
-				route: false,
-				hydrate: {
-					status: 200,
-					error: null,
-					nodes: [
-						import("/font-awesome-svgs/_app/pages/icon.svelte-4ac15158.js")
-					],
-					page: {
-						host: location.host, // TODO this is redundant
-						path: "/icon",
-						query: new URLSearchParams(""),
-						params: {}
-					}
-				}
-			});
-		</script>
-	</head>
-	<body>
-		<div id="svelte">
-
-
-
-
-<div style="flex-grow: 1; display: flex; flex-direction: column"><div style="margin: auto">Loading icon...
-    </div></div>
-<footer style="padding: .5em; border-top: .25em solid #eee"><div class="show-on-big-screen">Made with love by <a href="https://github.com/trustedtomato">Tamás Halasi</a>.
-    See project&#39;s source code on <a href="https://github.com/trustedtomato/font-awesome-svgs">GitHub</a>.
-    The SVGs are taken directly from <a href="https://www.npmjs.com/package/@fortawesome/fontawesome-free">Font Awesome&#39;s package</a>.
-  </div>
-  <div class="show-on-small-screen">Made by <a href="https://github.com/trustedtomato">Mr. Halasi</a>,
-    code is on <a href="https://github.com/trustedtomato/font-awesome-svgs">GitHub</a>,
-    props to <a href="https://github.com/FortAwesome/Font-Awesome/">Font Awesome</a>.
-  </div></footer>
-
-
-
-	
-</div>
-	</body>
-</html>
+<meta http-equiv="refresh" content="0;url=/icon/">
