--- a/index.html
+++ b/index.html
@@ -5,29 +5,34 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Font Awesome SVGs</title><link rel="icon" href="/font-awesome-svgs/icons/solid_anchor.svg" data-svelte="svelte-35nmaq">
 
+		
 
-
-<link rel="modulepreload" href="/font-awesome-svgs/_app/start-5b616241.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/vendor-5f322dcb.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/pages/index.svelte-f6491222.js">
-			<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/Head-b62789f6.js">
-			<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/start-ba7ec5b6.css">
-			<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/pages/index.svelte-55ff6835.css">
-
+		<link rel="modulepreload" href="/font-awesome-svgs/_app/start-16675618.js">
+		<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/vendor-8f24e83c.js">
+		<link rel="modulepreload" href="/font-awesome-svgs/_app/pages/__layout.svelte-eb0078aa.js">
+		<link rel="modulepreload" href="/font-awesome-svgs/_app/pages/index.svelte-d1fc1696.js">
+		<link rel="modulepreload" href="/font-awesome-svgs/_app/chunks/Head-b1e3bb7f.js">
+		<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/start-a8cd1609.css">
+		<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/vendor-32fda7c1.css">
+		<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/pages/__layout.svelte-cce9b17c.css">
+		<link rel="stylesheet" href="/font-awesome-svgs/_app/assets/pages/index.svelte-9f4222f6.css">
 
 		<script type="module">
-			import { start } from "/font-awesome-svgs/_app/start-5b616241.js";
+			import { start } from "/font-awesome-svgs/_app/start-16675618.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"/font-awesome-svgs","assets":"/font-awesome-svgs"},
 				session: {},
 				host: location.host,
-				route: false,
+				route: true,
+				spa: false,
+				trailing_slash: "always",
 				hydrate: {
 					status: 200,
 					error: null,
 					nodes: [
-						import("/font-awesome-svgs/_app/pages/index.svelte-f6491222.js")
+						import("/font-awesome-svgs/_app/pages/__layout.svelte-eb0078aa.js"),
+						import("/font-awesome-svgs/_app/pages/index.svelte-d1fc1696.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
