deploy: a4aea52e8d090013e78a9ac9690d2651796fac71

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				host: location.host,
 				route: true,
 				spa: false,
-				trailing_slash: "always",
+				trailing_slash: "ignore",
 				hydrate: {
 					status: 200,
 					error: null,
